# softdesk

./: .gitignore  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
softdesk/: apps.py  permissions.py
softdesk/migrations/: 0001_initial.py
softdesk/models/: __init__.py  choices.py  comment.py  contributor.py  issue.py  project.py
softdesk/serializers/: __init__.py  comment_serializers.py  contributor_serializers.py  issue_serializers.py  project_serializers.py
softdesk/views/: __init__.py  comment.py  contributor.py  issue.py  project.py
users/: models.py  serializers.py
users/migrations/: 0001_initial.py  0002_alter_user_can_be_contacted_alter_user_can_be_shared.py
