[tool.poetry]
name = "softdesk"
version = "0.1.0"
description = ""
authors = ["lethyxnekuia <maxguillemot@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-html = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"